redis volume 오타 수정

--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     image: redis:alpine
     restart: unless-stopped
     volumes:
-      - redis_data:/dataf
+      - redis_data:/data
     expose:
       - 6379
       
